--- a/frontend/src/components/force_layout/force_layout.css
+++ b/frontend/src/components/force_layout/force_layout.css
@@ -1,7 +1,7 @@
 .visualization-container {
   display: flex;
   flex-direction: column;
-  height: calc(100vh - 107px);
+  height: calc(100vh - 81px);
   width: 100vw;
   position: fixed;
   bottom: 40px;
@@ -20,8 +20,7 @@
   border-top: 1px solid #7d7d7d;
   border-bottom: 1px solid #323232;
   width: 100%;
-  position: fixed;
-  top: 41px;
+  position: absolute;
   background-color: #323232;
   z-index: 1;
 }
@@ -40,7 +39,7 @@
   cursor: default;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 25px;
+  margin-top: 52px;
   font-size: 30px;
   color: #323232;
   text-shadow: 0 2px 5px #fff;
