--- a/frontend/src/components/matrix/matrix.css
+++ b/frontend/src/components/matrix/matrix.css
@@ -8,7 +8,7 @@
 
 .bg1 {
   transition: 0.5s;
-  background-image: url('/images/bg1.jpg');
+  background-image: url('/images/bg4.png');
 }
 
 .bg3 {
@@ -165,6 +165,7 @@ text.active {
   border: 1px solid whitesmoke;
   box-sizing: border-box;
   margin: 0;
+  background-color: rgb(186, 51, 51, 0.3);
 }
 
 #barchart label {
@@ -184,7 +185,7 @@ text.active {
 text {
   cursor: default;
   font: 10px sans-serif;
-  fill: whitesmoke;
+  fill: white;
 }
 
 .axis {
@@ -208,7 +209,7 @@ text {
 
 .barchart-bar:hover {
   fill: white;
-  opacity: 0.4;
+  opacity: 0.8;
   border: 1px solid grey;
 }
 
